<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.OnBoardingActivity"
    android:background="@drawable/onboarding"
    android:fitsSystemWindows="true">

    <!-- View avec dégradé -->
    <View
        android:id="@+id/viewGradient"
        android:layout_width="0dp"
        android:layout_height="450dp"
        android:background="@drawable/bottom_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- TextView : Nom de l'application -->
    <TextView
        android:id="@+id/onBoardingAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/come_join_us"
        android:layout_marginHorizontal="20dp" />

    <!-- TextView : Message -->
    <TextView
        android:id="@+id/come_join_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/bahnschrift"
        android:text="@string/come_join_us"
        android:textColor="#E6E6E6"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/logInFromOnBoarding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Bouton : Connexion -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logInFromOnBoarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signUpFromOnBoarding"
        android:layout_marginHorizontal="20dp"
        android:text="@string/log_in_text"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:fontFamily="@font/bahnschrift"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:paddingVertical="10dp"
        android:background="@drawable/background_button_non_fill"/>

    <!-- Bouton : Autre action -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpFromOnBoarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="35dp"
        android:paddingVertical="10dp"
        android:text="@string/get_started_text"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/splashColor"
        android:fontFamily="@font/bahnschrift"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/background_button_fill"/>
</androidx.constraintlayout.widget.ConstraintLayout>
